[tool.poetry]
name = "pdf2dataset"
version = "0.3.1"
readme = "README.md"
description = "Easily convert a big folder with PDFs into a dataset, with extracted text using OCR"
authors = ["Ícaro Pires <icaropsa@gmail.com>"]
license = "Apache License 2.0"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
repository = "https://github.com/icaropires/pdf2dataset"

[tool.poetry.dependencies]
fastparquet = "0.4.0"
more-itertools = "8.4.0"
opencv-python = "4.2.0.34"
packaging = "20.4"
pdf2image = "1.13.1"
pdftotext = "2.1.4"
pytesseract = "0.3.4"
python = "^3.6"
ray = "0.8.6"
tqdm = "4.47.0"

[tool.poetry.dev-dependencies]    
pytest = "^5.2"
flake8 = "3.7.9"

[tool.poetry.scripts]
pdf2dataset = "pdf2dataset.__main__:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

